--- a/Debug/makefile
+++ b/Debug/makefile
@@ -1,5 +1,6 @@
 ################################################################################
 # Automatically-generated file. Do not edit!
+# Toolchain: GNU Tools for STM32 (9-2020-q2-update)
 ################################################################################
 
 -include ../makefile.init
@@ -28,6 +29,12 @@ endif
 
 -include ../makefile.defs
 
+OPTIONAL_TOOL_DEPS := \
+$(wildcard ../makefile.defs) \
+$(wildcard ../makefile.init) \
+$(wildcard ../makefile.targets) \
+
+
 BUILD_ARTIFACT_NAME := week4_DMA
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX := 
@@ -54,22 +61,22 @@ all: main-build
 main-build: week4_DMA.elf secondary-outputs
 
 # Tool invocations
-week4_DMA.elf: $(OBJS) $(USER_OBJS) C:\Users\Ryuusei\Documents\GitHub\Microcon\ C++\week4_MDA\STM32F411RETX_FLASH.ld
+week4_DMA.elf: $(OBJS) $(USER_OBJS) C:\Users\Ryuusei\Documents\GitHub\Microcon\ C++\week4_MDA\STM32F411RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-gcc -o "week4_DMA.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Ryuusei\Documents\GitHub\Microcon C++\week4_MDA\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="week4_DMA.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
-default.size.stdout: $(EXECUTABLES)
+default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-size  $(EXECUTABLES)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-week4_DMA.list: $(EXECUTABLES)
+week4_DMA.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "week4_DMA.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-week4_DMA.bin: $(EXECUTABLES)
+week4_DMA.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "week4_DMA.bin"
 	@echo 'Finished building: $@'
 	@echo ' '
